@@ -1,23 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST kipart-0.1.24.zip 126678 SHA256 52ee88b49b550828f0853abfbb424e307f708f778a3c12765138d2162e8c8d00 SHA512 d1e2ff8bbb81bb821b9160a5f2caf5327a8e73d42016accda089f6eb1ca23e1fa23fa22e7ddbdc0348c8d3847358aa9465e7117796aee28e00dc2de70760a61e WHIRLPOOL 8226bde1c8242b3183d8ed346ab53bff33744b91a54aaf9e68fefd668604e63c225d747d462094c6b3b5d736e0e28eada1388e83736f96753d81d86528b09a73
 DIST kipart-0.1.29.tar.gz 110242 SHA256 253e916ebb06109e3bb5018c6ebe875bb61518ba6728617d40f127dd81029b70 SHA512 c86cea1ca7c1c6cb2e946c0fefb43e0748ff2e9a2d52399bfb03c108e69982d93062fa2daf77ede2ae360e10336a6a62a85275093f43c005cf5957486a5848d1 WHIRLPOOL 98b05ef614de89f2e136ba83dc34c3604924472955f327f70e74471971d462c9810831c0ebd2c851db87638145d35716762bfca32ffdc9ce83d111d6de2c82ae
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlmQMwpfFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlmQMyFfFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn142xAAwIvuZ3BL4uiXlpsNfkYSqVXw89wFjObrE/nITDQPzgdqNSgL3mpvyw+M
-ukVjPLm1Lz5UvCUTQeS1bJKDzHrvU1Uaj631vGL8MFELpz8I0ZdLfQ93kih737Tr
-dNt0fyrk+hLkll0WX6zGQKjeLITtZsvf/okbVbADImulxOUje1dIvxrKMnXE4QbE
-o8ls7u7omLPBPX5xLJqEA59R9Y2CNQIKcZWbBkRUl5micEB2140XVGEwPERJ5KjH
-7DxNynGT1yAwHMltu/wfS4kz/HOoZDe1JpOYRiYcCOXIn0aol2chQCavdpu87LPJ
-c6MZalTvUPtcHf+7OR932jNjD0vxdACqSNoKLcS0PylzxnjHQRxMJ/fhg0t5xZz3
-K14I9Jl9GOjgcIfAoFK5hQ3VUYeScXkl9dA6mQmIxyVVvLNnwAbHjK4AQvzDPfu0
-F0apEh84fNTz5cn2dSFXYWTA0A9yKHADroEx7cNvsva8BlV15tJdiMXgtkeD9ZzD
-C3loMvepimiO+39isLvtwl4aHvGBKwVD4iV5HIvHylHrGiT13KDWf880cdfEyw37
-ME57RsaNV9YmpqFKOyWjwc+tX23b28vUTVG9lj3Y+y2TcJr3ql+ajGgBy6XfiQji
-WXjvEWjeexvthpIzxcz4/hLXLZNZn6a+Ilzdx6nlOIyEnUZQ9Ug=
-=YySA
+Hn0DUhAAhU0T3HO+DdcDZ2bWyVfPkJhIHKq4mKgwhHA5gtCN4GOKgggUELNGO78p
+bowOVZuX5Sirc3V8QQIyYkn1ALTRyOScMuG9ZlPX2WlLX07sC8Q4O96AVmROhDf3
+fmibB2s0YRhOmojFAOGTIQbVFDktm/piM6UP0YSd2eWFHjsxQZYaAEEwWmTsBkTZ
+902QNSvFG19prspPVaZLgRgj/17WmPtsbVXuRiTw0+MRDK0hW0j3OaMr5q5y1efr
+dwKTmXHVtvzNTB6Ceuf05tHr7USoysVV1eWFAmDAV+TL5Wp0I3ZKCVoVSrp8tZ2Y
+L/tF0gC/0E6ertCbPDDf3ix0iJi7cQlFQ7xSAnVy0yIathekOS0KYGwU7WSjDAmr
++pkFowtEGB+GfVgJSicOurj3t1wDLtDY8T0AwI6UX08UZ3pzrkXC1HroCoyKR49C
+g69+HQeo9Sl+dte1oM4lOUww2t+LgX1Y+rPdCR9Pp/vi9MyzDcraRLHRa4NHs1tl
+eyBAkw8J0KKFPalda2O3C3kHU4rZ0uAKDQfPT7L/ycouWQ/VoWpR5FPqO9WY4IXy
+mzFBJvJJObFZ/JzoF/hjYMNOsPmOyb4g7gmgrQrlhk4uUsnZyqGIy/sAIPOYiKQc
+fq5FSZLNnDvUK5Q4WkmZwBKenJkyOltYo1TBo0wwOU9CGgrtVOE=
+=arzS
 -----END PGP SIGNATURE-----
